Add list of shorthands api endpoint

--- a/public/index.html
+++ b/public/index.html
@@ -8,7 +8,8 @@
   <body>
     <div>
         <h1>Use the form to add a url to the shortcuts<h1>
-        <h1>You can then use the number associated with url at GET /api/shorturl/$url-number</h1>
+        <h1>You can then use the number associated with url at GET /shorturl/$url-number</h1>
+        <h1>You can get a json file of all available shorthands with GET /shorthands</h1>
         <form id="url-form">
           <input id="url-input" type="text" placeholder="enter the url here"/>
           <button>Submit</button>
